--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,8 +9,8 @@
 
 <body>
 	<div id="root" class="container">
-<!-- 
-		<header class="header clearfix">
+
+		<!-- <header class="header clearfix">
 			<div class="userblock">
 				<nav>
 					<ul class="nav nav-pills float-right">
@@ -24,9 +24,9 @@
 				</nav>
 			</div>
 			<h3 class="text-muted" href="/">Форумы</h3>
-		</header>
+		</header> -->
 
-		<form class="form-signin">
+		<!-- <form class="form-signin">
 			<h2 class="form-signin-heading">Создайте форум</h2>
 			<input type="slug" class="form-control input-top" placeholder="Slug" required="" autofocus="">
 			<input type="title" class="form-control input-base" placeholder="Title" required="">
@@ -46,57 +46,46 @@
 			<button class="btn btn-lg btn-primary btn-block" type="submit">Создать!</button>
 		</form> -->
 
+<!-- 
+		<div class="main-block">
 
-		<!-- <header class="header clearfix">
-				<div class="userblock">
-					<nav>
-						<ul class="nav nav-pills float-right">
-							<li class="nav-item">
-								<p class="nav-link">Здравствуйте</p>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#">Зарегистрироваться</a>
-							</li>
-						</ul>
-					</nav>
+			<h1 class="display-3">Создание форумов</h1>
+			<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
+				nibh, ut fermentum massa justo sit amet risus.</p>
+			<p>
+				<a class="btn btn-lg btn-success" href="#" role="button">Создать!</a>
+			</p>
+		</div>
+
+		<div class="row marketing">
+			<div class="col-lg-12">
+				<div class="card mb-3">
+					<div class="card-body">
+						<h4 class="card-title">Название</h4>
+						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<a href="#">Подробнее</a>
+					</div>
 				</div>
-				<h3 class="text-muted application-name">Форумы</h3>
-			</header>
-
-			<div class="main-block">
-
-				<h1 class="display-3">Создание форумов</h1>
-				<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-					nibh, ut fermentum massa justo sit amet risus.</p>
-				<p>
-					<a class="btn btn-lg btn-success" href="#" role="button">Создать!</a>
-				</p>
+				<div class="card mb-3">
+					<div class="card-body">
+						<h4 class="card-title">Название</h4>
+						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
+				<div class="card mb-3">
+					<div class="card-body">
+						<h4 class="card-title">Название</h4>
+						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
+						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+						<a href="#">Подробнее</a>
+					</div>
+				</div>
 			</div>
 
-			<div class="row marketing">
-				<div class="col-lg-6">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-					<h4>Subheading</h4>
-					<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-					<h4>Subheading</h4>
-					<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-				</div>
-
-				<div class="col-lg-6">
-					<h4>Subheading</h4>
-					<p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-					<h4>Subheading</h4>
-					<p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-					<h4>Subheading</h4>
-					<p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-				</div>
-
-			</div> -->
+		</div> -->
 
 
 
