--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,94 +4,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Forums</title>
-	<link rel="stylesheet" href="./bundle.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="/bundle.css" crossorigin="anonymous">
 </head>
 
 <body>
 	<div id="root" class="container">
-
-		<!-- <header class="header clearfix">
-			<div class="userblock">
-				<nav>
-					<ul class="nav nav-pills float-right">
-						<li class="nav-item">
-							<p class="nav-link">Здравствуйте</p>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Зарегистрироваться</a>
-						</li>
-					</ul>
-				</nav>
-			</div>
-			<h3 class="text-muted" href="/">Форумы</h3>
-		</header> -->
-
-		<!-- <form class="form-signin">
-			<h2 class="form-signin-heading">Создайте форум</h2>
-			<input type="slug" class="form-control input-top" placeholder="Slug" required="" autofocus="">
-			<input type="title" class="form-control input-base" placeholder="Title" required="">
-			<textarea class="form-control input-bot" rows="3" placeholder="Описание"></textarea>
-
-			<select class="form-control d-block my-3" required>
-				<option value="">Выберите тип голосов</option>
-				<option value="1">Лайки и дизлайки</option>
-				<option value="2">Оценки</option>
-				<option value="3">Только лайки</option>
-			</select>
-			<div class="checkbox">
-				<label>
-				  <input type="checkbox" value="remember-me"> Можно удалять сообщения
-				</label>
-			  </div>
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Создать!</button>
-		</form> -->
-
-<!-- 
-		<div class="main-block">
-
-			<h1 class="display-3">Создание форумов</h1>
-			<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-				nibh, ut fermentum massa justo sit amet risus.</p>
-			<p>
-				<a class="btn btn-lg btn-success" href="#" role="button">Создать!</a>
-			</p>
-		</div>
-
-		<div class="row marketing">
-			<div class="col-lg-12">
-				<div class="card mb-3">
-					<div class="card-body">
-						<h4 class="card-title">Название</h4>
-						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						<a href="#">Подробнее</a>
-					</div>
-				</div>
-				<div class="card mb-3">
-					<div class="card-body">
-						<h4 class="card-title">Название</h4>
-						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						<a href="#">Подробнее</a>
-					</div>
-				</div>
-				<div class="card mb-3">
-					<div class="card-body">
-						<h4 class="card-title">Название</h4>
-						<h6 class="card-subtitle mb-2 text-muted">slug</h6>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-						<a href="#">Подробнее</a>
-					</div>
-				</div>
-			</div>
-
-		</div> -->
-
-
-
-
 	</div>
-	<script src="./bundle.js"></script>
+	<script src="/bundle.js"></script>
 </body>
 
 </html>
